[package]
name = "rai-endpoint-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.31"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1.17"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
actix-web = "4.9.0"
rand = "0.8.5"
log = "0.4.17"
env_logger = "0.10.0"
once_cell = "1.20.2"