[package]
name = "rai-endpoint-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.31"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1.17"

serde = { version = "1.0.216", features = ["derive"] }

serde_json = "1.0.134"
actix-web = "4.9.0"
rand = "0.8.5"
log = "0.4.17"
env_logger = "0.11.6"
once_cell = "1.20.2"

clickhouse = { version = "0.13.1", features = ["uuid"] }
serde_yaml = "0.9"
derive_more = "0.99.18"

uuid = { version = "1.11.0", features = ["v4"] }
futures = "0.3.31"


[[bin]]
name = "rai-endpoint-simulator"
path = "src/main.rs"